--- a/documentation/splash.htm
+++ b/documentation/splash.htm
@@ -65,7 +65,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-			<img src="/content/images/banner.png" width="80%" align="middle"/>
+			<img src="http://jasperfx.github.io/marten/content/images/banner.png" width="80%" align="middle"/>
             <h1 style="color:white">Marten</h1>
             <h3>Postgresql as Document Db &amp; Event Store for .Net Development</h3>
 			
